<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffefebe7"
    android:orientation="vertical" >
    
       <include layout="@layout/title_bar"/>
       
       <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none" >
       
            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingBottom="30.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >
            	 

                <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="4.0dip"
                android:text="@string/msgpush"
                android:textColor="#ff888888"
                android:textSize="16.0sp" />
               
                
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Favorite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/tr_more_msgpush"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/fra_more_item_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/pushset"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/push"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            />
                    </TableRow>
                </TableLayout>
            </LinearLayout>

             <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:layout_marginTop="10.0dip"
                android:gravity="center_vertical"
                android:paddingLeft="4.0dip"
                android:text="@string/mysetting"
                android:textColor="#ff888888"
                android:textSize="16.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Follow"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="1.0dip"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/tr_more_bluetooth"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/fra_more_itemtop_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/myfollow"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/bluetoothchange"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr_more_serveraddress"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/fra_more_itemmiddle_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/search_friends"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/Serveraddress"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/tr_more_changepassword"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/fra_more_itembottom_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/invite_friends"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/passwordchange"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            android:src="@drawable/ic_arrow" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10.0dip"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Favorite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/tr_more_msgpush"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/fra_more_item_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/pushset"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/app_about"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            

             <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="10.0dip"
                
                android:layout_height="wrap_content" >

                <TableLayout
                    android:id="@+id/MorePageTableLayout_Favorite"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    
                    android:stretchColumns="0" >

                    <TableRow
                        android:id="@+id/tr_more_loginout"
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/fra_more_item_press"
                        android:paddingBottom="10.0dip"
                        android:paddingTop="10.0dip" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:textColor="@color/red"
                            android:text="@string/Loginout"
                            android:textSize="20.0sp" />

                    </TableRow>
                </TableLayout>
            </LinearLayout>
            
         
        </LinearLayout>
           
       </ScrollView>

</LinearLayout>
