<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffefebe7"
    android:orientation="vertical" >
    
    <include layout="@layout/title_bar"/>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="0"
                    android:stretchColumns="0" >

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_marginLeft="2.0dip"
                        android:layout_marginRight="2.0dip"
                        android:background="@drawable/fra_more_item_press"
                        android:paddingBottom="16.0dip"
                        android:paddingTop="16.0dip" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:drawableLeft="@drawable/pushset"
                            android:drawablePadding="10.0dip"
                            android:gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:text="@string/bluetoothstate"
                            android:textColor="#ff333333"
                            android:textSize="16.0sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:gravity="center_vertical"
                            android:paddingRight="20.0dip"
                            />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:orientation="horizontal">
            
         	   <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginBottom="10.0dip"
	                android:layout_marginTop="10dip"
	                android:layout_centerVertical="true"
	                android:paddingLeft="4.0dip"
	                android:text="@string/HadMatchedBluetooth"
	                android:textColor="#ff888888"
	                android:textSize="16.0sp" />
         	   
         	   <ProgressBar
         	       android:id="@+id/pb_search_bluetooth"
         	       style="?android:attr/progressBarStyleSmall"
         	       android:layout_alignParentRight="true"
         	       android:layout_centerVertical="true"
         	       android:layout_width="wrap_content"
         	       android:layout_marginRight="10dp"
         	       android:layout_height="wrap_content" />

            </RelativeLayout>
            
            <FrameLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_marginLeft="2.0dip"
                 android:layout_marginRight="2.0dip"
                 android:background="@drawable/fra_more_item_press"
                >
                
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_gravity="center_vertical"
                            android:includeFontPadding="false"
                            android:paddingLeft="17.0dip"
                            android:textColor="#ff333333"
                            android:text="没有匹配的设备"
                            android:textSize="16.0sp" />
            
	            <ListView
                    android:visibility="gone"
		            android:id="@+id/paired_devices"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:background="@drawable/my_text_shape"
		            android:cacheColorHint="#00000000"
		            android:paddingLeft="8dp"
		            android:paddingRight="8dp" >
	            </ListView>
            </FrameLayout>
            

            <TextView
                android:id="@+id/new_devices_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10.0dip"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="#ff888888"
                android:textSize="16.0sp" 
                android:paddingLeft="4.0dip"
                android:text="@string/HadSearchedBluetppth"
                android:visibility="gone" 
                />


        <ListView
            android:id="@+id/new_devices"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="@drawable/my_text_shape"
            android:cacheColorHint="#00000000"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" >
        </ListView>
       	</LinearLayout>
       
    

</LinearLayout>
